--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style/main.css">
+    <link rel="stylesheet" href="./style/DangNhap.css">
     <title>Đăng nhập</title>
 </head>
 <body>
@@ -22,7 +22,7 @@
                 <input type="password" name="" id="password">
             </div>
             <button>Đăng nhập</button>
-            <span><a href="">Quên mật khẩu?</a></span>
+            <span><a href="./QuenMatKhau.html">Quên mật khẩu?</a></span>
         </form>
     </div>
 </body>
