--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <label for="password">Mật khẩu</label>
                 <input type="password" name="" id="password">
             </div>
-            <button>Đăng nhập</button>
+            <button type="button" onclick="location.href='trangchu.html';">Đăng nhập</button>
             <span><a href="./QuenMatKhau.html">Quên mật khẩu?</a></span>
         </form>
     </div>
