--- a/trangchu.html
+++ b/trangchu.html
@@ -4,9 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style/TrangChu.css">
     <title>Trang chủ</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="head">
+            <div class="head-all">
+                <div class="head-logo">
+                    <a href="trangchu.html">
+                        <img src="https://cdn.discordapp.com/emojis/714176862636474430.webp?size=96&quality=lossless" alt="">
+                    </a>
+                </div>
+                <ul class="head-menu">
+                    <li><a href="">Khóa học</a></li>
+                    <li><a href="">Kì thi</a></li>
+                    <li>
+                        <a href="">Họ và tên</a>
+                        <ul class="sub-menu">
+                            <li><a href="">Khóa học</a></li>
+                            <li><a href="">Lịch sử</a></li>
+                            <li><a href="">Đổi mật khẩu</a></li>
+                            <li><a href="">Đăng xuất</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="nav">
+            nav
+        </div>
+        
+        <div class="content">
+            contenr
+        </div>
+
+        <div class="footer clear">
+            footer
+        </div>
+    </div>
 </body>
 </html>
