--- a/trangchu.html
+++ b/trangchu.html
@@ -20,7 +20,7 @@
                     <li><a href="">Khóa học</a></li>
                     <li><a href="">Kì thi</a></li>
                     <li>
-                        <a href="">Họ và tên</a>
+                        <a href="#">Họ và tên</a>
                         <ul class="sub-menu">
                             <li><a href="">Khóa học</a></li>
                             <li><a href="">Lịch sử</a></li>
@@ -33,15 +33,146 @@
         </div>
 
         <div class="nav">
-            nav
+            <ul>
+                <li><a href="trangchu.html">Trang chủ</a></li>
+                <li>
+                    <a href="">Các khóa học</a>
+                </li>
+            </ul>
         </div>
         
         <div class="content">
-            contenr
+            <div class="sche">
+                <h1>Thời khóa biểu</h1>
+
+                <table>
+                    <tr>
+                        <th>Tiết</th>
+                        <th>Thứ 2</th>
+                        <th>Thứ 3</th>
+                        <th>Thứ 4</th>
+                        <th>Thứ 5</th>
+                        <th>Thứ 6</th>
+                        <th>Thứ 7</th>
+                        <th>Chủ nhật</th>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>4</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>5</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>6</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>7</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>8</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>9</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>10</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                </table>
+            </div>
+            
         </div>
 
         <div class="footer clear">
-            footer
+            <div class="fit-hnue">
+                <p>Khoa công nghệ thông tin - Đại học sư phạm Hà Nội</p>
+                <span>Website: <a href="http://fit.hnue.edu.vn/">http://fit.hnue.edu.vn/</a> | Email:  <a href="mailto:cntt@hnue.edu.vn">cntt@hnue.edu.vn</a></span>
+            </div>
+            <div class="info">
+                <p>Lớp 70A - CNTT</p>
+                <ul>
+                    <li>Bùi Đức Anh - 705102001</li>
+                    <li>Bùi Đức Thắng - 705102020</li>
+                </ul>
+            </div>
         </div>
     </div>
 </body>
