--- a/trangchu.html
+++ b/trangchu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style/TrangChu.css">
+    <link rel="stylesheet" href="./assets/css/TrangChu.css">
     <title>Trang chủ</title>
 </head>
 <body>
@@ -19,8 +19,8 @@
                 <ul class="head-menu">
                     <li><a href="">Khóa học</a></li>
                     <li><a href="">Kì thi</a></li>
-                    <li>
-                        <a href="#">Họ và tên</a>
+                    <li id="lii">
+                        <a href="#" id="aa">Họ và tên</a>
                         <ul class="sub-menu">
                             <li><a href="">Khóa học</a></li>
                             <li><a href="">Lịch sử</a></li>
@@ -175,5 +175,7 @@
             </div>
         </div>
     </div>
+
+    <script src="./assets/js/jquery.js"></script>
 </body>
 </html>
