--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <input type="password" name="password" id="password">
             </div>
             <button>Đăng nhập</button>
-            <a href="./QuenMatKhau.html">Quên mật khẩu?</a>
+            <div><a href="./QuenMatKhau.html">Quên mật khẩu?</a></div>
         </form>
     </div>
 
