--- a/kythi.html
+++ b/kythi.html
@@ -5,66 +5,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/kythi.css">
     <title>Trang chủ</title>
+    <style>
+        .content {
+            margin-top: 60px;
+            width: 84%;
+            float: left;
+
+        }
+
+        .content h1 {
+            text-align: center;
+            margin-top: 20px;
+            margin-bottom: 20px;
+        }
+
+        .content p {
+            margin-left: 100px;
+        }
+    </style>
 </head>
 
 <body>
     <div class="container">
-        <div class="head">
-            <div class="head-all">
-                <div class="head-logo">
-                    <a href="trangchu.html">
-                        <img src="https://cdn.discordapp.com/emojis/714176862636474430.webp?size=96&quality=lossless"
-                            alt="">
-                    </a>
-                </div>
-                <ul class="head-menu">
-                    <li><a href="khoahoc.html">Khóa học</a></li>
-                    <li><a href="kythi.html">Kỳ thi</a></li>
-                    <li>
-                        <a href="#">Họ và tên</a>
-                        <ul class="sub-menu">
-                            <li><a href="lichsu.html">Lịch sử</a></li>
-                            <li><a href="doimatkhau.html">Đổi mật khẩu</a></li>
-                            <li><a href="index.html">Đăng xuất</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="nav">
-            <ul>
-                <li><a href="trangchu.html">Trang chủ</a></li>
-                <li>
-                    <a href="khoahoc.html">Các khóa học</a>
-                </li>
-            </ul>
-        </div>
-
         <div class="content">
             <h1>Kỳ thi hiện tại</h1>
             <p>Hiện chưa có kì thi nào</p>
         </div>
-
-        <div class="footer clear">
-            <div class="fit-hnue">
-                <p>Khoa công nghệ thông tin - Đại học sư phạm Hà Nội</p>
-                <span>Website: <a href="http://fit.hnue.edu.vn/">http://fit.hnue.edu.vn/</a> | Email: <a
-                        href="mailto:cntt@hnue.edu.vn">cntt@hnue.edu.vn</a></span>
-            </div>
-            <div class="info">
-                <p>Lớp 70A - CNTT</p>
-                <ul>
-                    <li>Bùi Đức Anh - 705102001</li>
-                    <li>Bùi Đức Thắng - 705102020</li>
-                </ul>
-            </div>
-        </div>
     </div>
-
-    <script src="./assets/js/jquery.js"></script>
 </body>
 
 </html>
