--- a/trangchu.html
+++ b/trangchu.html
@@ -20,13 +20,13 @@
                     </a>
                 </div>
                 <ul class="head-menu">
-                    <li><a href="khoahoc.html">Khóa học</a></li>
-                    <li><a href="kythi.html">Kỳ thi</a></li>
+                    <li><a href="khoahoc.html" target="noidung">Khóa học</a></li>
+                    <li><a href="kythi.html" target="noidung">Kỳ thi</a></li>
                     <li>
                         <a href="#">Họ và tên</a>
                         <ul class="sub-menu">
-                            <li><a href="lichsu.html">Lịch sử</a></li>
-                            <li><a href="doimatkhau.html">Đổi mật khẩu</a></li>
+                            <li><a href="lichsu.html" target="noidung">Lịch sử</a></li>
+                            <li><a href="doimatkhau.html" target="noidung">Đổi mật khẩu</a></li>
                             <li><a href="index.html">Đăng xuất</a></li>
                         </ul>
                     </li>
@@ -38,135 +38,15 @@
             <ul>
                 <li><a href="trangchu.html">Trang chủ</a></li>
                 <li>
-                    <a href="khoahoc.html">Các khóa học</a>
+                    <a href="khoahoc.html" target="noidung">Các khóa học</a>
                 </li>
             </ul>
         </div>
 
         <div class="content">
-            <div class="sche">
-                <h1>Thời khóa biểu</h1>
-                <p id="today"></p>
-                <p id="rank"></p>
-                <table>
-                    <tr>
-                        <th>Tiết</th>
-                        <th>Thứ 2</th>
-                        <th>Thứ 3</th>
-                        <th>Thứ 4</th>
-                        <th>Thứ 5</th>
-                        <th>Thứ 6</th>
-                        <th>Thứ 7</th>
-                        <th>Chủ nhật</th>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td rowspan="4">
-                            <a href="baitap.html">Toán 5 <br>
-                                (làm bài tập trước thứ 5 hàng tuần)</a>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>4</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>5</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>6</td>
-                        <td></td>
-                        <td></td>
-                        <td rowspan="4">
-                            <a href="baitap.html">Toán 5 <br>
-                                (làm bài tập trước thứ 3 hàng tuần)</a>
-                        </td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>7</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>8</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>9</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>10</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                </table>
-            </div>
-
+            
+            <iframe src="" name="noidung" frameborder="0"></iframe>
+            
         </div>
 
         <div class="footer clear">
