--- a/trangchu.html
+++ b/trangchu.html
@@ -45,7 +45,7 @@
 
         <div class="content">
             
-            <iframe src="" name="noidung" frameborder="0"></iframe>
+            <iframe src="./tkb.html" name="noidung" frameborder="0"></iframe>
             
         </div>
 
